[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "keithley_daq_tests"
version = "0.0.0"
description = "Tests."
dependencies = [
    # ? Core testing
    "pytest-cov==4.1.0",
    "pytest-custom-exit-code==0.3.0",
    "pytest-github-actions-annotate-failures==0.2.0",
    "pytest==8.0.0",
]

[tool.fawltydeps]
deps = ["tests/pyproject.toml"]
code = ["tests/keithley_daq_tests"]
ignore_undeclared = [
    "keithley_daq_docs",
    "keithley_daq_tests",
    "keithley_daq_tools",
    "keithley_daq",
]
ignore_unused = [
    # ? Core testing tools or plugins
    "pytest-cov",
    "pytest-custom-exit-code",
    "pytest-github-actions-annotate-failures",
    "pytest",
]
